--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script defer src="/script.js"></script>
     <title>My Library</title>
   </head>
   <body>
     <div id="root"></div>
-    <script src="/script.js"></script>
   </body>
 </html>
